@@ -25,11 +25,9 @@
                         <argument>-Xms2g</argument>
                         <argument>-Xmn1g</argument>
                         <argument>-XX:+PrintCommandLineFlags</argument>
+                        <argument>-XX:+PrintGCTimeStamps</argument>
                         <argument>-XX:+PrintGCDetails</argument>
                         <argument>-XX:+UseParallelOldGC</argument>
-                        <argument>-XX:-UseSplitVerifier</argument>
-                        <argument>-XX:-UseAdaptiveSizePolicy</argument>
-                        <argument>-XX:+UseNUMA</argument>
                         <argument>-XX:+AggressiveOpts</argument>
                         <!--<argument>-XX:+UseConcMarkSweepGC</argument>-->
                         <!--<argument>-XX:+UseG1GC</argument>-->
